# fnope

./: .gitignore  README.md  pyproject.toml
fnope/config/: base_paths.yaml  darcy_baseline_sbi_config.yaml  darcy_fnope_config.yaml  data_generation.yaml  ice_baseline_sbi_config.yaml  ice_fnope_config.yaml  linear_gaussian_baseline_sbi_config.yaml  linear_gaussian_fnope_config.yaml  sir_fnope_config.yaml
fnope/config/data_config/: darcy_small.yaml  darcy_snr_30.yaml  generate_darcy.yaml  generate_darcy_small.yaml  generate_linear_gaussian.yaml  ice.yaml  ice_500.yaml  linear_gaussian.yaml  linear_gaussian_ablation.yaml  sir.yaml
fnope/config/evaluation_config/: darcy.yaml  ice.yaml  linear_gaussian.yaml  sir.yaml
fnope/config/launcher/: slurm.yaml
fnope/config/model_config/: fnope_darcy.yaml  fnope_darcy_small.yaml  (+13 more)
fnope/experiments/: baseline_sbi_utils.py  evaluation_utils.py  summarize_experiment.ipynb
fnope/flow_matching/: base_distributions.py  fnope_1D.py  fnope_2D.py  training.py
fnope/nets/: finite_embeddings.py  finite_nets.py  fno_blocks.py  padding.py  padding2D.py  positional_embeddings.py  spectral_convolutions.py  spectral_transforms.py  standardizing_net.py  time_embeddings.py
fnope/simulators/: Readme_darcy.md  darcy.py  darcy_utils.py  gp_priors.py  simulator.py
fnope/utils/: metrics.py  misc.py  sampling.py
plots/: matplotlibrc  plot_ice_predictive.ipynb  plot_linearGaussian.ipynb  plot_results_Darcy.ipynb  plot_results_ice.ipynb  plot_sir.ipynb  plotting_utils.py
tutorials/: fnope_tutorial.ipynb  fnope_tutorial2d.ipynb
(+24 files in other folders)
